hphp/test/slow/test_runner/basic-error.php.hhvm.expectf
Catchable fatal error: Value returned from function foo() must be of type int, string given in %sbasic-error.php on line 4
